--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.35",
+    "expo-file-system": "^18.0.10",
+    "expo-media-library": "^17.0.6",
+    "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
