--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.16.1",
     "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.35",
     "expo-file-system": "^18.0.10",
