--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.16.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.35",
     "expo-file-system": "^18.0.10",
@@ -21,7 +23,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
